@@ -17,6 +17,7 @@ Matthew J. Fanto <mattjf at uncompiled.com>
 Yuval Fledel <yuvalfl at gmail.com>
 Marcin Gibuła <m.gibula at conecto.pl>
 Christophe Grenier <grenier at cgsecurity.org>
+Csaba Henk <csaba.henk at creo.hu>
 Ian Jackson <ian at davenant.greenend.org.uk>
 Carmelo Kintana <kintana at berkeley.edu>
 Jan Kratochvil <project-captive at jankratochvil.net>
